vcluster-use-cases/flux/manifests/flux-kustomization.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: p-vcluster-flux-demo
---
apiVersion: v1
kind: Namespace
metadata:
  name: flux-apps
