vcluster-use-cases/flux/manifests/vcluster-secret-cleaner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vcluster-secret-cleaner
  namespace: p-vcluster-flux-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vcluster-secret-cleaner
  template:
    metadata:
      labels:
        app: vcluster-secret-cleaner
    spec:
      serviceAccountName: vcluster-secret-cleaner
      containers:
        - name: cleaner
          image: bitnami/kubectl:1.30
          command:
            - /bin/sh
            - -ceu
            - |
              [...]
